--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@nuxt/image": "^1.5.0",
     "nuxt": "^3.11.2",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-carousel-3d": "^1.0.1",
+    "vue-router": "^4.3.0",
+    "vue3-carousel": "^0.3.3"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.11.4",
