--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue": "^3.4.21",
     "vue-carousel-3d": "^1.0.1",
     "vue-router": "^4.3.0",
-    "vue3-carousel": "^0.3.3"
+    "vue3-carousel": "^0.3.3",
+    "vue3-carousel-nuxt": "^1.1.2"
   },
   "devDependencies": {
     "@nuxtjs/tailwindcss": "^6.11.4",
