--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@nuxt/image": "^1.5.0",
     "@pinia/nuxt": "^0.5.1",
+    "lucide-vue-next": "^0.523.0",
     "nuxt": "^3.11.2",
     "nuxt-leaflet": "^0.0.27",
     "pinia": "^2.1.7",
