--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lucide-vue-next": "^0.523.0",
     "nuxt": "^3.11.2",
     "nuxt-leaflet": "^0.0.27",
+    "nuxt-lucide-icons": "^1.0.5",
     "pinia": "^2.1.7",
     "vue": "^3.4.21",
     "vue-carousel-3d": "^1.0.1",
